@@ -1,7 +1,7 @@
 require 'spec_helper'
 require 'druid/page_factory'
 
-class TestDruid
+class FactoryTestDruid
   include Druid
   page_url "http://www.baidu.com"
 end
@@ -20,14 +20,14 @@ describe Druid::PageFactory do
 
   it "should create and visit a new page" do
     expect(@world.driver).to receive(:goto)
-    @world.visit_page TestDruid do |page|
-      expect(page).to be_instance_of TestDruid
+    @world.visit_page FactoryTestDruid do |page|
+      expect(page).to be_instance_of FactoryTestDruid
     end
   end
   it "should create a new page object and execute a block" do
     expect(@world.driver).not_to receive(:goto)
-    @world.on_page TestDruid do |page|
-      expect(page).to be_instance_of TestDruid
+    @world.on_page FactoryTestDruid do |page|
+      expect(page).to be_instance_of FactoryTestDruid
     end
   end
 end
